OO-9123: fine tuned deletion of lectures / notices for Hibernate 6.6